// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Svelte Attribute Node > components 1`] = `
"import { resolveComponent as _resolveComponent, children as _children, createComponent as _createComponent, template as _template } from 'vue/vapor';
const t0 = _template("<div class=\\"container\\"></div>")

export function render(_ctx) {
  const _component_Foo = _resolveComponent("Foo")
  const _component_Baz = _resolveComponent("Baz")
  const _component_Bar = _resolveComponent("Bar")
  const n9 = t0()
  const n0 = n9.firstChild
  const n1 = _children(n9, 0, 0)
  const n3 = n0.nextSibling
  const n4 = _children(n9, 1, 0)
  const n6 = n4.nextSibling
  const n8 = n3.nextSibling
  const n2 = _createComponent(_component_Foo)
  const n5 = _createComponent(_component_Baz)
  const n7 = _createComponent(_component_Bar)
  return [n0, n1, n2, n3, n4, n5, n6, n7, n8, n9]
}"
`;

exports[`Svelte Attribute Node > components 2`] = `
{
  "block": {
    "dynamic": {
      "children": [
        {
          "children": [
            {
              "children": [],
              "flags": 1,
              "id": 0,
            },
            {
              "children": [
                {
                  "children": [],
                  "flags": 1,
                  "id": 1,
                },
              ],
              "flags": 7,
              "id": 2,
            },
            {
              "children": [],
              "flags": 1,
              "id": 3,
            },
            {
              "children": [
                {
                  "children": [],
                  "flags": 1,
                  "id": 4,
                },
                {
                  "children": [],
                  "flags": 7,
                  "id": 5,
                },
                {
                  "children": [],
                  "flags": 1,
                  "id": 6,
                },
              ],
              "flags": 7,
              "id": 7,
            },
            {
              "children": [],
              "flags": 1,
              "id": 8,
            },
          ],
          "flags": 1,
          "id": 9,
          "template": 0,
        },
      ],
      "flags": 1,
    },
    "effect": [],
    "node": {
      "children": [
        {
          "attributes": [
            {
              "end": 22,
              "name": "class",
              "start": 5,
              "type": "Attribute",
              "value": [
                {
                  "data": "container",
                  "end": 21,
                  "raw": "container",
                  "start": 12,
                  "type": "Text",
                },
              ],
            },
          ],
          "children": [
            {
              "data": "
        ",
              "end": 32,
              "raw": "
        ",
              "start": 23,
              "type": "Text",
            },
            {
              "attributes": [
                {
                  "end": 48,
                  "name": "class",
                  "start": 37,
                  "type": "Attribute",
                  "value": [
                    {
                      "data": "foo",
                      "end": 47,
                      "raw": "foo",
                      "start": 44,
                      "type": "Text",
                    },
                  ],
                },
              ],
              "children": [
                {
                  "data": "
        ",
                  "end": 58,
                  "raw": "
        ",
                  "start": 49,
                  "type": "Text",
                },
              ],
              "end": 64,
              "name": "Foo",
              "start": 32,
              "type": "InlineComponent",
            },
            {
              "data": "
        ",
              "end": 73,
              "raw": "
        ",
              "start": 64,
              "type": "Text",
            },
            {
              "attributes": [
                {
                  "end": 85,
                  "name": "bar",
                  "start": 78,
                  "type": "Attribute",
                  "value": [
                    {
                      "data": "1",
                      "end": 84,
                      "raw": "1",
                      "start": 83,
                      "type": "Text",
                    },
                  ],
                },
              ],
              "children": [
                {
                  "data": "
          ",
                  "end": 97,
                  "raw": "
          ",
                  "start": 86,
                  "type": "Text",
                },
                {
                  "attributes": [],
                  "children": [],
                  "end": 104,
                  "name": "Baz",
                  "start": 97,
                  "type": "InlineComponent",
                },
                {
                  "data": "
        ",
                  "end": 113,
                  "raw": "
        ",
                  "start": 104,
                  "type": "Text",
                },
              ],
              "end": 119,
              "name": "Bar",
              "start": 73,
              "type": "InlineComponent",
            },
            {
              "data": "
      ",
              "end": 126,
              "raw": "
      ",
              "start": 119,
              "type": "Text",
            },
          ],
          "end": 132,
          "name": "div",
          "start": 0,
          "type": "Element",
        },
      ],
      "components": [],
      "directives": [],
      "helpers": Set {},
      "source": "<div class="container">
        <Foo class="foo">
        </Foo>
        <Bar bar="1">
          <Baz />
        </Bar>
      </div>",
      "temps": 0,
      "type": 0,
    },
    "operation": [
      {
        "asset": true,
        "id": 2,
        "once": false,
        "props": [
          [],
        ],
        "root": false,
        "slots": [],
        "tag": "Foo",
        "type": 13,
      },
      {
        "asset": true,
        "id": 5,
        "once": false,
        "props": [
          [],
        ],
        "root": false,
        "slots": [],
        "tag": "Baz",
        "type": 13,
      },
      {
        "asset": true,
        "id": 7,
        "once": false,
        "props": [
          [],
        ],
        "root": false,
        "slots": [],
        "tag": "Bar",
        "type": 13,
      },
    ],
    "returns": [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
    ],
    "type": 1,
  },
  "component": Set {
    "Foo",
    "Baz",
    "Bar",
  },
  "directive": Set {},
  "node": {
    "children": [
      {
        "attributes": [
          {
            "end": 22,
            "name": "class",
            "start": 5,
            "type": "Attribute",
            "value": [
              {
                "data": "container",
                "end": 21,
                "raw": "container",
                "start": 12,
                "type": "Text",
              },
            ],
          },
        ],
        "children": [
          {
            "data": "
        ",
            "end": 32,
            "raw": "
        ",
            "start": 23,
            "type": "Text",
          },
          {
            "attributes": [
              {
                "end": 48,
                "name": "class",
                "start": 37,
                "type": "Attribute",
                "value": [
                  {
                    "data": "foo",
                    "end": 47,
                    "raw": "foo",
                    "start": 44,
                    "type": "Text",
                  },
                ],
              },
            ],
            "children": [
              {
                "data": "
        ",
                "end": 58,
                "raw": "
        ",
                "start": 49,
                "type": "Text",
              },
            ],
            "end": 64,
            "name": "Foo",
            "start": 32,
            "type": "InlineComponent",
          },
          {
            "data": "
        ",
            "end": 73,
            "raw": "
        ",
            "start": 64,
            "type": "Text",
          },
          {
            "attributes": [
              {
                "end": 85,
                "name": "bar",
                "start": 78,
                "type": "Attribute",
                "value": [
                  {
                    "data": "1",
                    "end": 84,
                    "raw": "1",
                    "start": 83,
                    "type": "Text",
                  },
                ],
              },
            ],
            "children": [
              {
                "data": "
          ",
                "end": 97,
                "raw": "
          ",
                "start": 86,
                "type": "Text",
              },
              {
                "attributes": [],
                "children": [],
                "end": 104,
                "name": "Baz",
                "start": 97,
                "type": "InlineComponent",
              },
              {
                "data": "
        ",
                "end": 113,
                "raw": "
        ",
                "start": 104,
                "type": "Text",
              },
            ],
            "end": 119,
            "name": "Bar",
            "start": 73,
            "type": "InlineComponent",
          },
          {
            "data": "
      ",
            "end": 126,
            "raw": "
      ",
            "start": 119,
            "type": "Text",
          },
        ],
        "end": 132,
        "name": "div",
        "start": 0,
        "type": "Element",
      },
    ],
    "components": [],
    "directives": [],
    "helpers": Set {},
    "source": "<div class="container">
        <Foo class="foo">
        </Foo>
        <Bar bar="1">
          <Baz />
        </Bar>
      </div>",
    "temps": 0,
    "type": 0,
  },
  "source": "<div class="container">
        <Foo class="foo">
        </Foo>
        <Bar bar="1">
          <Baz />
        </Bar>
      </div>",
  "template": [
    "<div class="container"></div>",
  ],
  "type": 0,
}
`;

exports[`Svelte Attribute Node > components 3`] = `
Set {
  "resolveComponent",
  "children",
  "createComponent",
  "template",
}
`;

exports[`Svelte Attribute Node > native elements 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<p style=\\"color: red;\\"></p>")
const t1 = _template("<img src=\\"foo.jpg\\" width=\\"500\\" height=\\"600\\">")
const t2 = _template("<input type=\\"text\\">")
const t3 = _template("<input type=\\"submit\\">")
const t4 = _template("<form action=\\"/submit\\" method=\\"post\\"></form>")
const t5 = _template("<div class=\\"header\\"></div>")
const t6 = _template("<div class=\\"container\\"></div>")

export function render(_ctx) {
  const n16 = t6()
  const n0 = n16.firstChild
  const n14 = n0.nextSibling
  const n14 = t5()
  const n1 = n14.firstChild
  const n3 = n1.nextSibling
  const n3 = t0()
  const n2 = n3.firstChild
  const n4 = n3.nextSibling
  const n5 = n4.nextSibling
  const n5 = t1()
  const n6 = n5.nextSibling
  const n12 = n6.nextSibling
  const n12 = t4()
  const n7 = n12.firstChild
  const n8 = n7.nextSibling
  const n8 = t2()
  const n9 = n8.nextSibling
  const n10 = n9.nextSibling
  const n10 = t3()
  const n11 = n10.nextSibling
  const n13 = n12.nextSibling
  const n15 = n14.nextSibling
  return [n0, n1, n2, n3, n4, n5, n6, n7, n8, n9, n10, n11, n12, n13, n14, n15, n16]
}"
`;

exports[`Svelte Attribute Node > native elements 2`] = `
{
  "block": {
    "dynamic": {
      "children": [
        {
          "children": [
            {
              "children": [],
              "flags": 1,
              "id": 0,
            },
            {
              "children": [
                {
                  "children": [],
                  "flags": 1,
                  "id": 1,
                },
                {
                  "children": [
                    {
                      "children": [],
                      "flags": 1,
                      "id": 2,
                    },
                  ],
                  "flags": 1,
                  "id": 3,
                  "template": 0,
                },
                {
                  "children": [],
                  "flags": 1,
                  "id": 4,
                },
                {
                  "children": [],
                  "flags": 1,
                  "id": 5,
                  "template": 1,
                },
                {
                  "children": [],
                  "flags": 1,
                  "id": 6,
                },
                {
                  "children": [
                    {
                      "children": [],
                      "flags": 1,
                      "id": 7,
                    },
                    {
                      "children": [],
                      "flags": 1,
                      "id": 8,
                      "template": 2,
                    },
                    {
                      "children": [],
                      "flags": 1,
                      "id": 9,
                    },
                    {
                      "children": [],
                      "flags": 1,
                      "id": 10,
                      "template": 3,
                    },
                    {
                      "children": [],
                      "flags": 1,
                      "id": 11,
                    },
                  ],
                  "flags": 1,
                  "id": 12,
                  "template": 4,
                },
                {
                  "children": [],
                  "flags": 1,
                  "id": 13,
                },
              ],
              "flags": 1,
              "id": 14,
              "template": 5,
            },
            {
              "children": [],
              "flags": 1,
              "id": 15,
            },
          ],
          "flags": 1,
          "id": 16,
          "template": 6,
        },
      ],
      "flags": 1,
    },
    "effect": [],
    "node": {
      "children": [
        {
          "attributes": [
            {
              "end": 22,
              "name": "class",
              "start": 5,
              "type": "Attribute",
              "value": [
                {
                  "data": "container",
                  "end": 21,
                  "raw": "container",
                  "start": 12,
                  "type": "Text",
                },
              ],
            },
          ],
          "children": [
            {
              "data": "
        ",
              "end": 32,
              "raw": "
        ",
              "start": 23,
              "type": "Text",
            },
            {
              "attributes": [
                {
                  "end": 51,
                  "name": "class",
                  "start": 37,
                  "type": "Attribute",
                  "value": [
                    {
                      "data": "header",
                      "end": 50,
                      "raw": "header",
                      "start": 44,
                      "type": "Text",
                    },
                  ],
                },
              ],
              "children": [
                {
                  "data": "
          ",
                  "end": 63,
                  "raw": "
          ",
                  "start": 52,
                  "type": "Text",
                },
                {
                  "attributes": [
                    {
                      "end": 85,
                      "name": "style",
                      "start": 66,
                      "type": "Attribute",
                      "value": [
                        {
                          "data": "color: red;",
                          "end": 84,
                          "raw": "color: red;",
                          "start": 73,
                          "type": "Text",
                        },
                      ],
                    },
                  ],
                  "children": [
                    {
                      "data": "Hello",
                      "end": 91,
                      "raw": "Hello",
                      "start": 86,
                      "type": "Text",
                    },
                  ],
                  "end": 95,
                  "name": "p",
                  "start": 63,
                  "type": "Element",
                },
                {
                  "data": "
          ",
                  "end": 106,
                  "raw": "
          ",
                  "start": 95,
                  "type": "Text",
                },
                {
                  "attributes": [
                    {
                      "end": 124,
                      "name": "src",
                      "start": 111,
                      "type": "Attribute",
                      "value": [
                        {
                          "data": "foo.jpg",
                          "end": 123,
                          "raw": "foo.jpg",
                          "start": 116,
                          "type": "Text",
                        },
                      ],
                    },
                    {
                      "end": 136,
                      "name": "width",
                      "start": 125,
                      "type": "Attribute",
                      "value": [
                        {
                          "data": "500",
                          "end": 135,
                          "raw": "500",
                          "start": 132,
                          "type": "Text",
                        },
                      ],
                    },
                    {
                      "end": 149,
                      "name": "height",
                      "start": 137,
                      "type": "Attribute",
                      "value": [
                        {
                          "data": "600",
                          "end": 148,
                          "raw": "600",
                          "start": 145,
                          "type": "Text",
                        },
                      ],
                    },
                  ],
                  "children": [],
                  "end": 150,
                  "name": "img",
                  "start": 106,
                  "type": "Element",
                },
                {
                  "data": "
          ",
                  "end": 161,
                  "raw": "
          ",
                  "start": 150,
                  "type": "Text",
                },
                {
                  "attributes": [
                    {
                      "end": 183,
                      "name": "action",
                      "start": 167,
                      "type": "Attribute",
                      "value": [
                        {
                          "data": "/submit",
                          "end": 182,
                          "raw": "/submit",
                          "start": 175,
                          "type": "Text",
                        },
                      ],
                    },
                    {
                      "end": 197,
                      "name": "method",
                      "start": 184,
                      "type": "Attribute",
                      "value": [
                        {
                          "data": "post",
                          "end": 196,
                          "raw": "post",
                          "start": 192,
                          "type": "Text",
                        },
                      ],
                    },
                  ],
                  "children": [
                    {
                      "data": "
            ",
                      "end": 211,
                      "raw": "
            ",
                      "start": 198,
                      "type": "Text",
                    },
                    {
                      "attributes": [
                        {
                          "end": 229,
                          "name": "type",
                          "start": 218,
                          "type": "Attribute",
                          "value": [
                            {
                              "data": "text",
                              "end": 228,
                              "raw": "text",
                              "start": 224,
                              "type": "Text",
                            },
                          ],
                        },
                      ],
                      "children": [],
                      "end": 232,
                      "name": "input",
                      "start": 211,
                      "type": "Element",
                    },
                    {
                      "data": "
            ",
                      "end": 245,
                      "raw": "
            ",
                      "start": 232,
                      "type": "Text",
                    },
                    {
                      "attributes": [
                        {
                          "end": 265,
                          "name": "type",
                          "start": 252,
                          "type": "Attribute",
                          "value": [
                            {
                              "data": "submit",
                              "end": 264,
                              "raw": "submit",
                              "start": 258,
                              "type": "Text",
                            },
                          ],
                        },
                      ],
                      "children": [],
                      "end": 266,
                      "name": "input",
                      "start": 245,
                      "type": "Element",
                    },
                    {
                      "data": "
          ",
                      "end": 277,
                      "raw": "
          ",
                      "start": 266,
                      "type": "Text",
                    },
                  ],
                  "end": 284,
                  "name": "form",
                  "start": 161,
                  "type": "Element",
                },
                {
                  "data": "
        ",
                  "end": 293,
                  "raw": "
        ",
                  "start": 284,
                  "type": "Text",
                },
              ],
              "end": 299,
              "name": "div",
              "start": 32,
              "type": "Element",
            },
            {
              "data": "
      ",
              "end": 306,
              "raw": "
      ",
              "start": 299,
              "type": "Text",
            },
          ],
          "end": 312,
          "name": "div",
          "start": 0,
          "type": "Element",
        },
      ],
      "components": [],
      "directives": [],
      "helpers": Set {},
      "source": "<div class="container">
        <div class="header">
          <p style="color: red;">Hello</p>
          <img src="foo.jpg" width="500" height="600">
          <form action="/submit" method="post">
            <input type="text" />
            <input type="submit">
          </form>
        </div>
      </div>",
      "temps": 0,
      "type": 0,
    },
    "operation": [],
    "returns": [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
      13,
      14,
      15,
      16,
    ],
    "type": 1,
  },
  "component": Set {},
  "directive": Set {},
  "node": {
    "children": [
      {
        "attributes": [
          {
            "end": 22,
            "name": "class",
            "start": 5,
            "type": "Attribute",
            "value": [
              {
                "data": "container",
                "end": 21,
                "raw": "container",
                "start": 12,
                "type": "Text",
              },
            ],
          },
        ],
        "children": [
          {
            "data": "
        ",
            "end": 32,
            "raw": "
        ",
            "start": 23,
            "type": "Text",
          },
          {
            "attributes": [
              {
                "end": 51,
                "name": "class",
                "start": 37,
                "type": "Attribute",
                "value": [
                  {
                    "data": "header",
                    "end": 50,
                    "raw": "header",
                    "start": 44,
                    "type": "Text",
                  },
                ],
              },
            ],
            "children": [
              {
                "data": "
          ",
                "end": 63,
                "raw": "
          ",
                "start": 52,
                "type": "Text",
              },
              {
                "attributes": [
                  {
                    "end": 85,
                    "name": "style",
                    "start": 66,
                    "type": "Attribute",
                    "value": [
                      {
                        "data": "color: red;",
                        "end": 84,
                        "raw": "color: red;",
                        "start": 73,
                        "type": "Text",
                      },
                    ],
                  },
                ],
                "children": [
                  {
                    "data": "Hello",
                    "end": 91,
                    "raw": "Hello",
                    "start": 86,
                    "type": "Text",
                  },
                ],
                "end": 95,
                "name": "p",
                "start": 63,
                "type": "Element",
              },
              {
                "data": "
          ",
                "end": 106,
                "raw": "
          ",
                "start": 95,
                "type": "Text",
              },
              {
                "attributes": [
                  {
                    "end": 124,
                    "name": "src",
                    "start": 111,
                    "type": "Attribute",
                    "value": [
                      {
                        "data": "foo.jpg",
                        "end": 123,
                        "raw": "foo.jpg",
                        "start": 116,
                        "type": "Text",
                      },
                    ],
                  },
                  {
                    "end": 136,
                    "name": "width",
                    "start": 125,
                    "type": "Attribute",
                    "value": [
                      {
                        "data": "500",
                        "end": 135,
                        "raw": "500",
                        "start": 132,
                        "type": "Text",
                      },
                    ],
                  },
                  {
                    "end": 149,
                    "name": "height",
                    "start": 137,
                    "type": "Attribute",
                    "value": [
                      {
                        "data": "600",
                        "end": 148,
                        "raw": "600",
                        "start": 145,
                        "type": "Text",
                      },
                    ],
                  },
                ],
                "children": [],
                "end": 150,
                "name": "img",
                "start": 106,
                "type": "Element",
              },
              {
                "data": "
          ",
                "end": 161,
                "raw": "
          ",
                "start": 150,
                "type": "Text",
              },
              {
                "attributes": [
                  {
                    "end": 183,
                    "name": "action",
                    "start": 167,
                    "type": "Attribute",
                    "value": [
                      {
                        "data": "/submit",
                        "end": 182,
                        "raw": "/submit",
                        "start": 175,
                        "type": "Text",
                      },
                    ],
                  },
                  {
                    "end": 197,
                    "name": "method",
                    "start": 184,
                    "type": "Attribute",
                    "value": [
                      {
                        "data": "post",
                        "end": 196,
                        "raw": "post",
                        "start": 192,
                        "type": "Text",
                      },
                    ],
                  },
                ],
                "children": [
                  {
                    "data": "
            ",
                    "end": 211,
                    "raw": "
            ",
                    "start": 198,
                    "type": "Text",
                  },
                  {
                    "attributes": [
                      {
                        "end": 229,
                        "name": "type",
                        "start": 218,
                        "type": "Attribute",
                        "value": [
                          {
                            "data": "text",
                            "end": 228,
                            "raw": "text",
                            "start": 224,
                            "type": "Text",
                          },
                        ],
                      },
                    ],
                    "children": [],
                    "end": 232,
                    "name": "input",
                    "start": 211,
                    "type": "Element",
                  },
                  {
                    "data": "
            ",
                    "end": 245,
                    "raw": "
            ",
                    "start": 232,
                    "type": "Text",
                  },
                  {
                    "attributes": [
                      {
                        "end": 265,
                        "name": "type",
                        "start": 252,
                        "type": "Attribute",
                        "value": [
                          {
                            "data": "submit",
                            "end": 264,
                            "raw": "submit",
                            "start": 258,
                            "type": "Text",
                          },
                        ],
                      },
                    ],
                    "children": [],
                    "end": 266,
                    "name": "input",
                    "start": 245,
                    "type": "Element",
                  },
                  {
                    "data": "
          ",
                    "end": 277,
                    "raw": "
          ",
                    "start": 266,
                    "type": "Text",
                  },
                ],
                "end": 284,
                "name": "form",
                "start": 161,
                "type": "Element",
              },
              {
                "data": "
        ",
                "end": 293,
                "raw": "
        ",
                "start": 284,
                "type": "Text",
              },
            ],
            "end": 299,
            "name": "div",
            "start": 32,
            "type": "Element",
          },
          {
            "data": "
      ",
            "end": 306,
            "raw": "
      ",
            "start": 299,
            "type": "Text",
          },
        ],
        "end": 312,
        "name": "div",
        "start": 0,
        "type": "Element",
      },
    ],
    "components": [],
    "directives": [],
    "helpers": Set {},
    "source": "<div class="container">
        <div class="header">
          <p style="color: red;">Hello</p>
          <img src="foo.jpg" width="500" height="600">
          <form action="/submit" method="post">
            <input type="text" />
            <input type="submit">
          </form>
        </div>
      </div>",
    "temps": 0,
    "type": 0,
  },
  "source": "<div class="container">
        <div class="header">
          <p style="color: red;">Hello</p>
          <img src="foo.jpg" width="500" height="600">
          <form action="/submit" method="post">
            <input type="text" />
            <input type="submit">
          </form>
        </div>
      </div>",
  "template": [
    "<p style="color: red;"></p>",
    "<img src="foo.jpg" width="500" height="600">",
    "<input type="text">",
    "<input type="submit">",
    "<form action="/submit" method="post"></form>",
    "<div class="header"></div>",
    "<div class="container"></div>",
  ],
  "type": 0,
}
`;

exports[`Svelte Attribute Node > native elements 3`] = `
Set {
  "template",
}
`;
